--- a/ui/components/Navbar/Navbar.module.css
+++ b/ui/components/Navbar/Navbar.module.css
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 20px 30px;
+    padding: 20px 40px;
+    border-bottom: 1px solid rgb(184, 184, 184);
 }
 
 .links {
